--- a/data/mac/config.yml
+++ b/data/mac/config.yml
@@ -1,5 +1,5 @@
 rss_feed_urlx : http://localhost/scrap/bttv/samples/britishtechmac_rss.xml.php
-rss_feed_url : http://bttv.kimptoc.net/Smart-TV-BTTV-Config/feed.php?name=mac
-
-page_title : British Tech Mac
-#remote_config_url : http://bttv.kimptoc.net/Smart-TV-BTTV-Config/channels.json.php
+rss_feed_url : http://bttv.kimptoc.net/Smart-TV-BTTV-Config/feed.php?name=mac-video
+page_title : British Tech Network - Mac
+widgetame : BTN-Mac
+description : British Tech News - Mac Show
