use correct icons

--- a/data/mac/config.yml
+++ b/data/mac/config.yml
@@ -3,3 +3,4 @@ rss_feed_url : http://bttv.kimptoc.net/Smart-TV-BTTV-Config/feed.php?name=mac-vi
 page_title : British Tech Network - Mac
 widgetame : BTN-Mac
 description : British Tech News - Mac Show
+icon_dir : mac
