--- a/data/photo/config.yml
+++ b/data/photo/config.yml
@@ -3,3 +3,4 @@ rss_feed_url : http://bttv.kimptoc.net/Smart-TV-BTTV-Config/feed.php?name=photo-
 page_title : British Tech Network - Photo
 widgetame : BTN-Photo
 description : British Tech News - Photo
+icon_dir : photo
