updated docs, tidied config generation

--- a/data/mac/config.yml
+++ b/data/mac/config.yml
@@ -1,6 +1,7 @@
 rss_feed_urlx : http://localhost/scrap/bttv/samples/britishtechmac_rss.xml.php
 rss_feed_url : http://bttv.kimptoc.net/Smart-TV-BTTV-Config/feed.php?name=mac-video
 page_title : British Tech Network - Mac
-widgetame : BTN-Mac
+widgetname : British Tech Network - Mac
 description : British Tech News - Mac Show
 icon_dir : mac
+ver : 0.103
